tests/e2e/pass/m2_expr.ep
# EXIT: 0
# STDOUT: 7
fun main(): void {
    putstr(itoa(1 + 2 * 3))
    putstr("\n")
    os.ExitProcess(0)
}
